[gd_scene load_steps=9 format=3 uid="uid://d3sphtegc8uwx"]

[ext_resource type="Script" path="res://Scenes/Main/GameServer.gd" id="1_7h12j"]
[ext_resource type="Script" path="res://Scenes/Main/PlayerVerification.gd" id="2_d15g5"]
[ext_resource type="Script" path="res://Scenes/Main/StateProcessing.gd" id="3_51ths"]
[ext_resource type="Script" path="res://Scenes/Main/World.gd" id="4_77d3x"]
[ext_resource type="PackedScene" uid="uid://c7lmd2nk75oys" path="res://Maps/TestLevel/TestArea.tscn" id="5_i7lnq"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_81cvc"]

[sub_resource type="Sky" id="Sky_qq3uq"]
sky_material = SubResource( "ProceduralSkyMaterial_81cvc" )

[sub_resource type="Environment" id="Environment_rbbmy"]
background_mode = 2
sky = SubResource( "Sky_qq3uq" )

[node name="GameServer" type="Node"]
script = ExtResource( "1_7h12j" )

[node name="PlayerVerification" type="Node" parent="."]
script = ExtResource( "2_d15g5" )

[node name="VerificationExpiration" type="Timer" parent="PlayerVerification"]
wait_time = 10.0
autostart = true

[node name="TokenExpiration" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="StateProcessing" type="Node" parent="."]
script = ExtResource( "3_51ths" )

[node name="World" type="Node3D" parent="."]
script = ExtResource( "4_77d3x" )

[node name="Players" type="Node3D" parent="World"]

[node name="Map" parent="World" instance=ExtResource( "5_i7lnq" )]

[node name="Camera3D" type="Camera3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 0.897751, 0.440503, 0, -0.440503, 0.897751, 9.53674e-07, 6.29747, 11.9081)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( "Environment_rbbmy" )

[connection signal="timeout" from="PlayerVerification/VerificationExpiration" to="PlayerVerification" method="_on_verification_expiration_timeout"]
[connection signal="timeout" from="TokenExpiration" to="." method="_on_TokenExpiration_timeout"]
